# cocoichi-menu-mcp

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
cocoichi_menu/: __init__.py  server.py
data/: menu.ts  options.ts  sauces.ts  spiceLevels.ts  toppings.ts
deno/: server.ts
src/: server.ts
src/cocoichi_menu_mcp/: __init__.py  menu_loader.py  models.py  server.py
tests/: test_parser.py  test_server.py
