[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoichi-menu-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing a CocoICHI menu resource"
readme = "README.md"
authors = [{ name = "CoCoICHI", email = "info@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "modelcontextprotocol",
]

[project.urls]
Homepage = "https://www.ichibanya.co.jp/"
